--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <script type="text/javascript" src="http://opticanet.com.br/js/Funcoes.js?20151020"></script>
     <script type="text/javascript" src="http://opticanet.com.br/js/SoftCan-Portal.js?20151020"></script>
     <script type="text/javascript" src="http://opticanet.com.br/js/Destaques.js?20151020"></script>
-    <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/jquery/shadowbox.css" /><link type="text/css" rel="stylesheet" href="/templates/css/Global.css?20151020" /><link type="text/css" rel="stylesheet" href="/templates/css/Layout.css?20151020" /><link type="text/css" rel="stylesheet" href="/templates/css/Destaques.css" /><link type="text/css" rel="stylesheet" href="/templates/css/Padroes.css" />
+    <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/jquery/shadowbox.css" />
+    <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/Global.css?20151020" />
+    <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/Layout.css?20151020" />
+    <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/Destaques.css" />
+    <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/Padroes.css" />
 </head>
 <body>
   <h2>optTeste - Teste APP Opticanet</h2>
