--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script type="text/javascript" src="http://opticanet.com.br/js/jquery/shadowbox.js"></script>
     <script type="text/javascript" src="http://opticanet.com.br/js/Funcoes.js?20151020"></script>
-    <script type="text/javascript" src="http://opticanet.com.br/js/SoftCan-Portal.js?20151020"></script>
+    <script type="text/javascript" src="http://opticanet.com.br/js/SoftCan-Portal-Teste.js?20151020"></script>
     <script type="text/javascript" src="http://opticanet.com.br/js/Destaques.js?20151020"></script>
     <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/jquery/shadowbox.css" />
     <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/Global.css?20151020" />
