--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="theme-color" content="#006AB0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#006AB0" />
   
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script type="text/javascript" src="http://opticanet.com.br/js/jquery/shadowbox.js"></script>
-    <script type="text/javascript" src="http://opticanet.com.br/js/Funcoes.js?20151020"></script>
     <script type="text/javascript" src="http://opticanet.com.br/js/SoftCan-Portal-Teste.js?20151020"></script>
     <script type="text/javascript" src="http://opticanet.com.br/js/Destaques.js?20151020"></script>
-    <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/jquery/shadowbox.css" />
     <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/Global.css?20151020" />
-    <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/Layout.css?20151020" />
     <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/Destaques.css" />
     <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/Padroes.css" />
 </head>
 <body>
   <h2>optTeste - Teste APP Opticanet</h2>
   
-  <div  title-text="Veja Também" class="CaixaMateriasUltimas materia-caixa-col-2"></div>
+  <h3>Notícias<h3>
+  <div  title-text="Veja Também" class="CaixaMateriasUltimas"></div>
+
+  </h3>
 
   </body>
 </html>
