--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#006AB0" />
   
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script type="text/javascript" src="http://opticanet.com.br/js/SoftCan-Portal-Teste.js?20151020"></script>
-    <script type="text/javascript" src="http://opticanet.com.br/js/Destaques.js?20151020"></script>
+    <script type="text/javascript" src="http://opticanet.com.br/js/Destaques-Teste.js"></script>
     <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/Global.css?20151020" />
     <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/Destaques.css" />
     <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/Padroes.css" />
-</head>
+    
+    </head>
 <body>
   <h2>optTeste - Teste APP Opticanet</h2>
   
   <h3>Notícias<h3>
-  <div  title-text="Veja Também" class="CaixaMateriasUltimas"></div>
+  <div  title-text="Veja Também" class="CaixaUltimas"></div>
 
   </h3>
 
+
+      <script type="text/javascript" charset="ISO-8859-1" src="http://www.opticanet.com.br/secao/widget/widget_UltNoticias.ashx?cx=un"></script> 
+        <div class="optNewsUN"></div>
+        
   </body>
 </html>
