--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     
     </head>
 <body>
-  <h2>optTeste - Teste APP Opticanet</h2>
+  <h2 class="padrao-cen-color">optTeste - Teste APP Opticanet</h2>
   
-  <h3>Notícias<h3>
+  <h3 class="padrao-por-color">Notícias<h3>
   <div  title-text="Veja Também" class="CaixaUltimas"></div>
 
   </h3>
