--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h2 class="padrao-cen-color">optTeste - Teste APP Opticanet</h2>
   
   <h3 class="padrao-por-color">Notícias<h3>
-  <div  title-text="Veja Também" class="CaixaUltimas"></div>
+  <div  title-text="Veja Também" class="CaixaMateriasUltimas"></div>
 
   </h3>
 
