--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
   </h3>
 
 
-      <script type="text/javascript" charset="ISO-8859-1" src="http://www.opticanet.com.br/secao/widget/widget_UltNoticias.ashx?cx=un"></script> 
-        <div class="optNewsUN"></div>
+	  <iframe src="http://opticanet.com.br/caixasdestaque/CaixaMateriasUltimas.ashx" width="100%" height="400"></iframe>
         
   </body>
 </html>
