--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="http://opticanet.com.br/js/Destaques-Teste.js"></script>
     <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/Global.css?20151020" />
     <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/Destaques.css" />
-    <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/Padroes.css" />
+    <link type="text/css" rel="stylesheet" href="Padroes.css" />
     
     </head>
 <body>
