--- a/index.html
+++ b/index.html
@@ -3,19 +3,13 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#006AB0" />
-  
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script type="text/javascript" src="http://opticanet.com.br/js/SoftCan-Portal-Teste.js?20151020"></script>
-    <script type="text/javascript" src="http://opticanet.com.br/js/Destaques-Teste.js"></script>
-    <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/Global.css?20151020" />
-    <link type="text/css" rel="stylesheet" href="http://opticanet.com.br/templates/css/Destaques.css" />
-    <link type="text/css" rel="stylesheet" href="Padroes.css" />
+.padrao-cen-color {color:#980000;}
     
     </head>
 <body>
   <h2 class="padrao-cen-color">optTeste - Teste APP Opticanet</h2>
   
-  <h3 class="padrao-por-color">Notícias<h3>
+  <h3 style="color:#339966;">Notícias<h3>
   <div  title-text="Veja Também" class="CaixaMateriasUltimas"></div>
 
   </h3>
