--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#006AB0" />
+	<style type="text/css">
 .padrao-cen-color {color:#980000;}
-    
+	</style>
     </head>
 <body>
   <h2 class="padrao-cen-color">optTeste - Teste APP Opticanet</h2>
