--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
   </h3>
 
-
-	  <iframe src="http://opticanet.com.br/caixasdestaque/CaixaMateriasUltimas.ashx" width="100%" height="400"></iframe>
+                <script type="text/javascript" charset="ISO-8859-1" src="http://www.opticanet.com.br/secao/widget/widget_UltNoticias.ashx?cx=un"></script> 
+        <div class="optNewsUN"></div>
+        
         
   </body>
 </html>
