--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
   </h3>
 
-                <script type="text/javascript" charset="ISO-8859-1" src="http://www.opticanet.com.br/secao/widget/widget_UltNoticias.ashx?cx=un"></script> 
-        <div class="optNewsUN"></div>
+                <script type="text/javascript">alert("Hello World!!!");</scrip>
         
         
   </body>
