--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <div  title-text="Veja Também" class="CaixaMateriasUltimas"></div>
 
   </h3>
-
-                <script type="text/javascript">alert("Hello World!!!");</scrip>
+	  <div id="divTeste"></div>
+                <script type="text/javascript">document.getElementById("divTeste").innerHTML = "Hello World!!!";</script>
+	  
+	  
         
         
   </body>
