--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 
   </h3>
 	  <div id="divTeste"></div>
-                <script type="text/javascript">document.getElementById("divTeste").innerHTML = "Hello World!!!";</script>
+                <script type="text/javascript">
+			document.getElementById("divTeste").innerHTML = "Hello World!!!";
+	  
+	  alert('Teste de envio de mensagem');
+	  </script>
 	  
 	  
         
