--- a/index.html
+++ b/index.html
@@ -10,18 +10,10 @@
 <body>
   <h2 class="padrao-cen-color">optTeste - Teste APP Opticanet</h2>
   
-  <h3 style="color:#339966;">Notícias<h3>
-  <div  title-text="Veja Também" class="CaixaMateriasUltimas"></div>
-
-  </h3>
-	  <div id="divTeste"></div>
-                <script type="text/javascript">
-			document.getElementById("divTeste").innerHTML = "Hello World!!!";
-	  
-	  alert('Teste de envio de mensagem');
-	  </script>
+  <h3 style="color:#339966;">Notícias</h3>
 	  
 	  
+	<iframe="http://opticanet.com.br/caixasdestaque/caixamateriasultimas.ashx" width="100%" height="400"></iframe>  
         
         
   </body>
