--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h3 style="color:#339966;">Notícias</h3>
 	  
 	  
-	<iframe="http://opticanet.com.br/caixasdestaque/caixamateriasultimas.ashx" width="100%" height="400"></iframe>  
+	<iframe src="http://opticanet.com.br/caixasdestaque/caixamateriasultimas.ashx" width="100%" height="400"></iframe>  
         
         
   </body>
