--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#006AB0" />
+	<script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
 	<style type="text/css">
 .padrao-cen-color {color:#980000;}
 	</style>
-    </head>
-<body>
+    <script type="text/javascript" charset="utf-8">
+function onBodyLoad()
+    {
+        document.addEventListener("deviceready",onDeviceReady,false);
+    }
+    /* When this function is called, PhoneGap has been initialized and is ready to roll */
+    function onDeviceReady()
+    {
+    
+       window.location="http://www.cantini.com.br";
+      
+    }
+    </script>
+  </head>
+  <body onload="onBodyLoad()">
   <h2 class="padrao-cen-color">optTeste - Teste APP Opticanet</h2>
   
   <h3 style="color:#339966;">Notícias</h3>
