--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ function onBodyLoad()
     function onDeviceReady()
     {
     
-       window.location="http://www.cantini.com.br";
+       window.location="http://www.opticanet.com.br";
       
     }
     </script>
